<resources>
    <string name="app_name">Villes-Emploi</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_id">1535030600132171</string>
    <string name="email">Email </string>
    <string name="password">Mot de passe </string>
    <string name="submitLogin">Se connecter</string>
    <string name="submitInscription">S\'inscrire</string>
    <string name="signup_question">Pas encore de compte?</string>
    <string name="forgotpassword_question">Mot de passe oublié?</string>
    <string name="errorEmail">Veuillez entrer un email correct</string>
    <string name="errorPassword">Le mot de passe doit faire minimum 5 caractères</string>
    <string name="errorVerifPassword">Les mots de passe ne sont pas identiques</string>
    <string name="errorAskS">Veuillez remplir tous les champs</string>
    <string name="errorSexe">Veuillez choisir un sexe</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="prenom">Prenom </string>
    <string name="nom">Nom </string>
    <string name="pseudo">Pseudo </string>
    <string name="mobile">Mobile</string>
    <string name="adresse">Adresse</string>
    <string name="verifPassword">Vérification </string>
    <string name="CP">Code Postal </string>
    <string name="sexe">Sexe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="askS">Vous êtes?</string>
    <string name="inscription">Inscription</string>
    <string name="progressLogin">Authentification...</string>
    <string name="progressInscription">Création du compte...</string>
    <string name="com_facebook_loginview_log_out_button">Se deconnecter</string>
    <string name="com_facebook_loginview_log_in_button">Se connecter</string>
    <string name="com_facebook_loginview_log_in_button_long">S\'enregistrer avec Facebook</string>
    <string name="title_activity_query_test">QueryTest</string>
    <string name="categorie1">CVMap</string>
    <string name="categorie2">Offres</string>
    <string name="categorie3">Candidatures</string>
    <string name="titleProfil">Mon profil</string>
    <string name="title_phone">Telephone</string>
    <string name="title_adresse">Adresse</string>

    <string name="descProfil">
        Trouver un chemin prometteur, confirmer des choix d’orientation,préparer un entretien de sélection ou d’embauche….Autant d’occasions où bien se connaître est essentiel.
    </string>
    <string name="descOffres">
        Les offres proposées correspondent à votre profil. Les entreprises regardent jusqu\'à 4 fois plus les candidats qui possèdent un CVMap, vous pouvez le completer
    </string>
    <string name="descOffres2">
        Vous avez également la possibilité d\'élargir vos paramètres de recherches dans la barre d\'outils ci-dessus.
    </string>

    <string name="descSearch">Je souhaite élargir mes recherches:</string>

    <string name="text_inf">aux emplois nécéssitant un niveau de diplôme inférieur au mien.</string>
    <string name="text_without">aux emplois qui sont accessibles sans diplômes et qui correspondent à un profil d\'interêt proche du mien.</string>
    <string name="text_choice">à certains métiers que je choisis</string>
    <string name="villes_choice">aux villes que je choisis</string>

    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_offres">Mes offres</string>
    <string name="title_activity_tribu">Tribu</string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_menu"> </string>

    <string name="home">Accueil</string>
    <string name="infos">Modifier mes informations</string>
    <string name="offres">Mes offres enregistrées</string>

    <string name="prenomProfil">Tony</string>
    <string name="nomProfil">Malfoy</string>
    <string name="metier">Développeur Android</string>
    <string name="mat1">JAVA</string>
    <string name="mat2">XML</string>
    <string name="mat3">PHP</string>
    <string name="title_cvmap">Mon CVMap</string>
    <string name="show_cvmap">Voir mon CVMap</string>
    <string name="update_cvmap">Modifier mon CVMap</string>

    <string name="coach_title">Votre coach</string>
    <string name="coach_title2">personnel</string>
    <string name="coach_desc_intro">Réussir, c\'est s\'entourer correctement, devenez la meilleur version de vous-même avec un coach personnalisé</string>
    <string name="coach_desc1">vous aidera dans la réalisation de votre CVMap qui sera mis en avant dans vos candidatures</string>
    <string name="coach_desc2">s\'adapte à votre profil pour vous donner les meilleurs conseils</string>
    <string name="coach_desc3">vous aidera à preparer vos entretiens d\'embauche ou d\' entrée en formation</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string name="updata_data">Updata data</string>
    <string name="submitUpdate">Enregistrer</string>
    <string name="noUpdate">Annuler</string>
    <string name="mes_offres">Mes offres</string>
    <string name="submitSearch">Enregistrer</string>
    <string name="submitCoach">Abonnez-vous pour 0.99€/semaine seulement.</string>
    <string name="what_is_coach">Qu\'est ce que le coach?</string>

    <string name="back">Retour</string>
    <string name="title_choice">Entrez un métier</string>

    <string name="title_compte">Compte</string>
    <string name="title_infos_generales">Infos générales</string>
    <string name="title_coordonnees">Coordonnées</string>

    <string name="update_title">Modifier</string>

    <string name="askMetier">Entrez un métier</string>
    <string name="askVille">Entrez une ville</string>

    <string name="bilan_title">Un bilan personnalisé d\'orientation</string>
    <string name="bilan_desc">Basé sur la méthode TRICAM ® , le test que vous avez passé permet aux conseillers de la Maison de l\'orientation d\'établir votre bilan d\'orientation personnalisé. Ce bilan vous permet de faire
    le point sur vos motivations, vous atouts et éventuellement vos faiblesses. Il vous indique en complément vos meilleures chances de réussite par rapport à 1000 métiers.
    Il vous permettra avec l\'aide de votre coach en ligne de peaufiner votre CVmap ® en trouvant les bons arguments pour appuyer vos motivations. Enfin, il vous aide à préparer vos entretiens de sélection pour une entrée en formation ou à un entretien d\'embauche.</string>

    <string-array name="head_titles">
        <item name="head_strong_point">Mes points forts</item>
        <item name="head_best_words">Mes verbes préférés</item>
        <item name="head_better_task">Taches où j\'excelle</item>
        <item name="head_personnal_advice">Conseils personnels</item>
        <item name="head_coach">Mon bilan personnel coach</item>
    </string-array>

    <string name="head_coach">Mon coach</string>
    <string name="bilanperso">Mon bilan personnel coach</string>

    <string name="res_pseudo">BlanKo</string>
    <string name="res_password">******</string>
    <string name="res_email">malfoy.tony@gmail.com</string>
    <string name="res_CP">62100</string>
    <string name="res_adresse">33 rue Mollien app 26</string>
    <string name="ville">Ville</string>
    <string name="res_sexe">Homme</string>
    <string name="res_mobile">06-58-62-43-43</string>
    <string name="res_ville">Calais</string>

    <string-array name="annonces_titles">
        <item>Développeur PHP/HTML</item>
        <item>Integrateur Web</item>
        <item>Développeur JS/JEE</item>
        <item>Développeur IOS</item>
        <item>Chef de projet informatique</item>
        <item>Développeur Android</item>
    </string-array>

    <string-array name="annonces_city">
        <item>Calais</item>
        <item>Bruay</item>
        <item>Lens</item>
        <item>Dunkerque</item>
        <item>Boulogne</item>
        <item>Lille</item>
    </string-array>

    <string-array name="annonces_dates">
        <item>Ajouté le 20/05/2016</item>
        <item>Ajouté le 12/05/2016</item>
        <item>Ajouté le 19/05/2016</item>
        <item>Ajouté le 20/05/2016</item>
        <item>Ajouté le 17/05/2016</item>
        <item>Ajouté le 18/05/2016</item>
    </string-array>

    <string-array name="list_metiers">
        <item>Développeur Web</item>
        <item>Développeur IOS</item>
        <item>Integrateur Web</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_update_data">UpdateData</string>
    <string name="title_activity_mes_offres">MesOffres</string>
    <string name="title_activity_show_cvmap">ShowCVMap</string>
    <string name="title_activity_update_cvmap">UpdateCVMap</string>
    <string name="title_activity_search_settings">SearchSettings</string>
    <string name="title_activity_coach">Coach</string>
    <string name="title_activity_compte_update">CompteUpdate</string>
    <string name="title_activity_infos_update">InfosUpdate</string>
    <string name="title_activity_coordonnees">Coordonnees</string>


    <string name="mapKey">AIzaSyCYasxbbhICEBH1kMm9xC2-mPjJYC7CowI</string>

</resources>
