<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.malfoy.leblanko.villes_emploi.Activity.Coordonnees"
    tools:showIn="@layout/activity_coordonnees">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/update_title_default"
            android:padding="10dp">

            <TextView
                android:id="@+id/title_adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_adresse"
                android:textAllCaps="true"
                android:textSize="@dimen/h4"
                android:textColor="@color/font_color1"
                android:padding="2dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/adresseEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adresse"
            android:text="@string/res_adresse"
            android:padding="5dp"
            android:background="@drawable/line_default"
            android:textSize="@dimen/h4"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/CPEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CP"
            android:text="@string/res_CP"
            android:textSize="@dimen/h4"
            android:padding="5dp"
            android:background="@drawable/line_default"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/villeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ville"
            android:text="@string/res_ville"
            android:padding="5dp"
            android:background="@drawable/line_bottom"
            android:textSize="@dimen/h4"
            android:maxLines="1"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/update_title_default"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/title_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_phone"
                android:textAllCaps="true"
                android:textSize="@dimen/h4"
                android:textColor="@color/font_color1"
                android:padding="2dp"/>

        </LinearLayout>


        <EditText
            android:id="@+id/mobileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:text="@string/res_mobile"
            android:textSize="@dimen/h4"
            android:padding="5dp"
            android:inputType="number"
            android:background="@drawable/line_default"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="right">

            <Button
                android:id="@+id/submitUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitUpdate"
                android:background="@drawable/button_default3"
                android:textSize="@dimen/h5"/>

            <Button
                android:id="@+id/noUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="-10dp"
                android:text="@string/noUpdate"
                android:background="@drawable/button_default3"
                android:textSize="@dimen/h5"/>



        </LinearLayout>



    </LinearLayout>


</LinearLayout>
