<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".Activity.Inscription"
    tools:showIn="@layout/activity_insciption">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/formMargin"
        android:layout_marginRight="@dimen/formMargin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/h1"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/linearRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_top"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/askS"
                android:textSize="16dp"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                android:textAlignment="gravity"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/homme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/homme"
                    android:textColorHint="@color/gray"/>

                <RadioButton
                    android:id="@+id/femme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/femme"
                    android:textColorHint="@color/gray"/>

            </RadioGroup>


        </LinearLayout>

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_top"
            android:hint="@string/prenom"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/nom"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/pseudo"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/CP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/CP"
            android:inputType="textPostalAddress"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/verifPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_bottom"
            android:hint="@string/verifPassword"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/submitInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitInscription"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_default"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>
</RelativeLayout>
