<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Coach">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/coach_back">

        <TextView
            android:id="@+id/coach_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coach_title"
            android:textColor="@color/white"
            android:textSize="@dimen/h1.5"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/coach_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coach_title2"
            android:textColor="@color/white"
            android:textSize="@dimen/h1.5"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coach_desc_intro"
            android:textSize="@dimen/h3"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />


    </LinearLayout>

    <Button
        android:id="@+id/submit_coach"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/submitCoach"
        android:textSize="@dimen/h4"
        android:textAllCaps="true"
        android:textColor="@color/background_color1"
        android:background="@drawable/button_default2"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="95dp"/>

    <ImageView
        android:id="@+id/back_page"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal|bottom"
        android:src="@drawable/bottom_arrow"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/what_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/what_is_coach"
        android:textColor="@color/background_color1"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="5dp"
        />

</FrameLayout>

