<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:background="@drawable/button_default"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/categorie1Xml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_default"
            android:text="@string/categorie1" />

        <Button
            android:id="@+id/categorie2Xml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_default"
            android:text="@string/categorie2"/>

        <Button
            android:id="@+id/categorie3Xml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_default"
            android:text="@string/categorie3"/>


    </LinearLayout>

</RelativeLayout>