<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@drawable/blurback"
    >

        <LinearLayout
            android:id="@+id/banniere_photo_infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:elevation="5dp">

            <ImageView
                android:id="@+id/defaultPhoto"
                android:layout_width="120dip"
                android:layout_height="120dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/default_photo"/>

            <LinearLayout
                android:id="@+id/infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:elevation="10dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/prenom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prenomProfil"
                        android:layout_marginRight="2dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/h2"/>

                    <TextView
                        android:id="@+id/nom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nomProfil"
                        android:textColor="@color/white"
                        android:textSize="@dimen/h2"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metier"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h3"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mat1"
                        android:textColor="@color/white"
                        android:background="@drawable/skill_default"
                        android:textSize="@dimen/h2"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mat2"
                        android:textColor="@color/white"
                        android:background="@drawable/skill_default"
                        android:textSize="@dimen/h2"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>




